<?xml version="1.0" encoding="utf-8"?>
<!--
プリファレンスアクティビティ
アプリケーションの設定情報はXMLで定義する. 
ソースコードでも定義可能であるが, ここでは省略する.
res/xml/pref.xml
設定画面をXMLで定義する.
res/xml/pref.xmlを新規に作成し, PreferenceScreen要素からなる設定情報の定義を記述する.
PreferenceCategory要素は, 設定項目の分類を表し, 各設定項目の属性定義をここに記述する.
CheckBoxPreference要素は, チェックボックスによる設定の定義を記述する.
EditTextPreference要素は, エディットテキストによる設定の定義を記述する.
ListPreference要素は, リストによる設定の定義を記述する. リストに表示する内容については, arrays.xml内で定義する.
RingtonePreferece要素は, 着信音の設定の定義を記述する.
-->
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/title">
		<!-- チェックボックスによる設定 -->
		<CheckBoxPreference
			android:key="checkbox_key"
			android:title="@string/checkbox_title"
			android:summary="@string/checkbox_summary"
			/>
		<!-- エディットテキストによる設定 -->
		<EditTextPreference
			android:key="edittext_key"
			android:title="@string/edittext_title"
			android:summary="@string/edittext_summary"
			/>
		<!-- リストによる設定 -->
		<ListPreference
			android:key="list_key"
			android:title="@string/list_title"
			android:summary="@string/list_summary"
			android:entries="@array/list_entries"
			android:entryValues="@array/list_entryvalues"
			/>
		<!-- 着信音の設定 -->
		<RingtonePreference
			android:key="ringtone_key"
			android:title="@string/ringtone_title"
			android:summary="@string/ringtone_summary"
			android:showDefault="true"
			/>
	</PreferenceCategory>
</PreferenceScreen>